# character_chatbot

./: .env.example  .gitignore  README.md  app.py  compose.example.yml  justfile  pyproject.toml  run.sh
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/src/: main.py  schemas.py
backend/src/api/: main.py
backend/src/api/routes/: chat.py
backend/src/chat/: schemas.py  services.py
backend/src/core/: config.py
backend/src/core/chat/: model_loader.py
llama-index/: app.py  config.py
llama-index/utils/: text2speech.py
scripts/: fish_inference.sh  process_subtitle.sh
src/: .gitignore  app.py  clone.py  config.py
src/configs/: fish.yaml
src/core/: agent.py  initialize.py  langchain.py  llama_index.py  speech_recognition.py  utils.py
src/core/chat_handler/: base.py  langchain.py  llama_index.py
src/core/chat_handler/langchain/: __init__.py  handler.py  memory.py
src/core/tts/: bark.py
src/core/tts/fish/: generate.py  inference.py
src/raw_subtitles/: 16bits_01.ass  16bits_01_JP_Konoha.json
src/tools/: process_subtitle.py
src/utils/: text2speech.py
src/utils/voice_cloning/: bark_voice_cloner.py
tools/: process_subtitle.py
