[project]
name = "chatbot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Kevin", email = "bluebright1402@gmail.com" }]
requires-python = "~=3.10.0"
readme = "README.md"
license = { text = "MIT" }


[project.optional-dependencies]
frontend = [
    "chainlit>=1.1.402",
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
    "langchain>=0.3.8",
    "langchain-ollama>=0.1.1",
    "langchain-community>=0.2.11",
    "librosa>=0.10.2.post1",
    "jq>=1.7.0",
    "langchain-chroma>=0.1.2",
    "loguru>=0.7.2",
    "hydra-core>=1.3",
    "fish-speech @ file:///${PROJECT_ROOT}/fish-speech",
    "openai>=1.41.0",
    "langchain-huggingface>=0.0.3",
    "unsloth>=2024.9",
    "torchaudio>=2.4.1",
    "huggingface-hub>=0.26.2",
    "xformers==0.0.28.post1",
    "langgraph>=0.2.53",
    "langchain-openai>=0.2.9",
    "pygraphviz>=1.14",
    "langgraph-cli>=0.1.62",
]
backend = [
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
    "langchain>=0.3.8",
    "langchain-ollama>=0.1.1",
    "langchain-community>=0.2.11",
    "librosa>=0.10.2.post1",
    "jq>=1.7.0",
    "langchain-chroma>=0.1.2",
    "loguru>=0.7.2",
    "hydra-core>=1.3",
    "openai>=1.41.0",
    "langchain-huggingface>=0.0.3",
    "unsloth>=2024.9",
    "torchaudio>=2.4.1",
    "huggingface-hub>=0.26.2",
    "xformers==0.0.28.post1",
    "langgraph>=0.2.53",
    "langchain-openai>=0.2.9",
    "sentry-sdk>=2.19.2",
    "langserve[server]>=0.3.0",
]

[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
